// transaction_service.proto
syntax = "proto3";

package pl.bartus.jakub.master.thesis.transactionsystem;

import "google/protobuf/timestamp.proto";

enum TransactionStatus {
  PENDING = 0;
  PROCESSING  = 1;
  SUCCESS  = 2;
  FAILED   = 3;
}

message TransactionRequest {
  string user_id               = 1;
  int64 transaction_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp      updated_at     = 4;
  TransactionStatus              status         = 5;
  string                         xmr_amount     = 6;
  int32                          coins          = 7;
  string                         user_wallet_address = 8;
  optional string                blockchain_tx_hash = 9;
}

message PaymentAddressResponse {
  string  server_wallet_address = 1;
  string  price_in_xmr          = 2;
  int32   coins                 = 3;
  TransactionStatus status = 4;
}

service TransactionService {
  rpc CreateTransaction (TransactionRequest)
      returns (PaymentAddressResponse);
}